Added function to shift bits on Hex Editor
Added TempleOS GUI Style
Added QNX GUI Style
Added setting to force CHR$ 128 mode on ZX81
Added search function to locate menu entries
Added .zmenu type files to generate launcher menus
Added more vintage Spectrum programs/games from me
Added Debug Sensors SPK & MIC Bit from port FEH
Added some tape copiers to Storage-> Tape menu

* Improvements:

Allow to load Next .nex/.snx/.sna snapshots with additional files without having to copy them on the mmc file (it mounts automatically the esxdos handler)
Allow to limit max cpu turbo on Next
Allow to pause playing on AY Player
Improved Keyboard Help: now you can press keys by clicking mouse
Allow to not save configuration when exiting ZEsarUX
Allow to select normal ZEsarUX logo or X Anniversary logo
Allow to send ZENG snapshots more frequently (even every 20 ms)
Allow autorewind setting for real tape too
Allow to disable Spectrum colours on real video mode too
Allow to press hotkeys at On Screen Keyboard
Remember last path used on output tape
Allow to load 48kB MSX cartridges
Allow to load MSX cartridges with memory mapper Ascii 8kb, Ascii 16kb, Konami without SCC, Konami with SCC, R-Type

Improved ZRCP:
- Added menu function to sync local snapshot to remote using ZRCP
- Added ZRCP commands: open-menu, print-error, get-text-overlay, cpu-history get extended
- Allow to use cpu-step-mode from ZRCP on drivers stdout and simpletext
- Support MMU restore state on ZRCP command "cpu-history restore" for Spectrum 128k/+2/+2a/+3

Improved QL emulation:
- Allow autoload when inserting QL mdv/flp
- Show 2 microdrive and 1 floppy icon on QL, instead of just one icon
- Allow to enable/disable every drive

Improved file selector:
- scrolling the current directory field if it does not fit on the window
- can change extension filter
- when saving files, cursor is located at the file field, and a file name is suggested
- file selection zone has a different color