@@ -21,6 +21,7 @@ Agregado tipo de archivos .zmenu para lanzar archivos
 Agregado mas antiguos programas/juegos mios de Spectrum
 Agregado Debug Sensors SPK & MIC Bit del puerto FEH
 Agregado algunos copiadores de cintas en menu Almacenamiento-> Tape
+Agregada opción para mensaje de bienvenida rápido
 
 * Mejoras:
 
