@@ -174,5 +174,7 @@ extern z80_bit automount_esxdos_nex;
 
 extern z80_bit index_menu_enabled;
 
+extern z80_bit opcion_fast_welcome_message;
+
 #endif
 
