@@ -21,6 +21,7 @@ Added .zmenu type files to generate launcher menus
 Added more vintage Spectrum programs/games from me
 Added Debug Sensors SPK & MIC Bit from port FEH
 Added some tape copiers to Storage-> Tape menu
+Added setting for fast welcome message
 
 * Improvements:
 
